Work on FarmMachinery Indexing
Fixing liquid templates search for FarmMachinery

--- a/src/OrchardCore.Modules/AffairesExtra.Migration/Views/Admin/Index.cshtml
+++ b/src/OrchardCore.Modules/AffairesExtra.Migration/Views/Admin/Index.cshtml
@@ -18,7 +18,7 @@
     <input type="submit" value="Import Farm Machinery Accessory" />
 </form>
 <br />
-<form asp-action="CleanOtherEquipement" method="post" enctype="multipart/form-data">
+<form asp-action="CleanOtherEquipment" method="post" enctype="multipart/form-data">
     <input type="submit" value="Clean Other Equipment" />
 </form>
 <br />
