--- a/src/OrchardCore.Themes/AffairesExtra/Views/Content-LandingPage.liquid
+++ b/src/OrchardCore.Themes/AffairesExtra/Views/Content-LandingPage.liquid
@@ -35,16 +35,6 @@
                                     {% endfor %}
                                 </select>
                             </div>
-                            <!--<div class="col-sm-3">
-                                {% assign machineryTypes = Queries.AllMachineryTypes | query %}
-                                <label for="type">{{ "Type" | t }}</label>
-                                <select id="type" class="form-control" name="type">
-                                    <option value="*" selected="">{{ "Choose..." | t }}</option>
-                                    {% for item in machineryTypes %}
-                                    <option value="{{ item.ContentItemId }}">{{ item | display_text }}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>-->
                             <div class="col-sm-3">
                                 {% assign machineryBrands = Queries.AllMachineryBrands | query %}
                                 <label for="brand">{{ "Marque" | t }}</label>
@@ -101,7 +91,6 @@
                                 <button type="submit" class="btn btn-primary">{{ "Search" | t }}</button>
                             </div>
                         </div>
-                        {% antiforgerytoken %}
                     </form>
                 </div>
                 <div class="tab-pane fade" id="farm-machinery-used" role="tabpanel" aria-labelledby="farm-machinery-used-tab">
@@ -118,16 +107,6 @@
                                     {% endfor %}
                                 </select>
                             </div>
-                            <!--<div class="col-sm-3">
-                                {% assign machineryTypes = Queries.AllMachineryTypes | query %}
-                                <label for="type">{{ "Type" | t }}</label>
-                                <select id="type" class="form-control" name="type">
-                                    <option value="*" selected="">{{ "Choose..." | t }}</option>
-                                    {% for item in machineryTypes %}
-                                    <option value="{{ item.ContentItemId }}">{{ item | display_text }}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>-->
                             <div class="col-sm-3">
                                 {% assign machineryBrands = Queries.AllMachineryBrands | query %}
                                 <label for="brand">{{ "Marque" | t }}</label>
@@ -161,7 +140,7 @@
                             <div class="col-sm-3">
                                 <label for="year">{{ "Year" | t }} </label>
                                 <select id="year" class="form-control" name="year">
-                                    <option value="*" selected="">{{ "Choose..." | t }}</option>
+                                    <option value="0" selected="">{{ "Choose..." | t }}</option>
                                     {% assign year = "now" | local | date: "%Y" %}
                                     {% for i in (1900..year) %}
                                     <option value="{{ i }}">{{ i }}</option>
@@ -184,56 +163,39 @@
                                 <button type="submit" class="btn btn-primary">{{ "Search" | t }}</button>
                             </div>
                         </div>
-                        {% antiforgerytoken %}
                     </form>
                 </div>
                 <div class="tab-pane fade" id="real-estate" role="tabpanel" aria-labelledby="real-estate-tab">
                     <form action="immobilier" method="get" >
                         <div class="form-row align-items-center">
                             <div class="col-sm-3">
+                                {% assign realEstateTypes = Queries.RealEstateTypes | query %}
                                 <label for="type">{{ "Property type" | t }}</label>
                                 <select id="type" class="form-control" name="type">
                                     <option value="*" selected="">{{ "Choose..." | t }}</option>
-                                    <option value="Chalet/Maison">Chalet/Maison</option>
-                                    <option value="Domaine">Domaine</option>
-                                    <option value="Espace commercial">Espace commercial</option>
-                                    <option value="Espace industriel">Espace industriel</option>
-                                    <option value="Étable/Grange">Étable/Grange</option>
-                                    <option value="Ferme/Fermette">Ferme/Fermette</option>
-                                    <option value="Garage">Garage</option>
-                                    <option value="Pourvoirie">Pourvoirie</option>
-                                    <option value="Terre à bois">Terre à bois</option>
-                                    <option value="Terre agricole">Terre agricole</option>
-                                    <option value="Terre constructible">Terre constructible</option>
+                                    {% for item in realEstateTypes %}
+                                    <option value="{{ item.ContentItemId }}" {% if Request.Query.type | downcase == item.ContentItemId | downcase %}selected{% endif %}>{{ item | display_text }}</option>
+                                    {% endfor %}
                                 </select>
                             </div>
                             <div class="col-sm-3">
+                                {% assign realEstateActivityTypes = Queries.RealEstateActivityTypes | query %}
                                 <label for="activitytype">{{ "Activity type" | t }}</label>
                                 <select id="activitytype" class="form-control" name="activitytype">
                                     <option value="*" selected="">{{ "Choose..." | t }}</option>
-                                    <option value="Autre">Autre</option>
-                                    <option value="Avicole">Avicole</option>
-                                    <option value="Bovine">Bovine</option>
-                                    <option value="Céréalière">Céréalière</option>
-                                    <option value="Élevage petits animaux">Élevage petits animaux</option>
-                                    <option value="Équestre">Équestre</option>
-                                    <option value="Érablière">Érablière</option>
-                                    <option value="Forestière">Forestière</option>
-                                    <option value="Horticulture">Horticulture</option>
-                                    <option value="Laitière">Laitière</option>
-                                    <option value="Maraichère">Maraichère</option>
-                                    <option value="Multiple">Multiple</option>
-                                    <option value="Porcine">Porcine</option>
-                                    <option value="Verger">Verger</option>
-                                    <option value="Vignoble">Vignoble</option>
+                                    {% for item in realEstateActivityTypes %}
+                                    <option value="{{ item.ContentItemId }}" {% if Request.Query.activitytype | downcase == item.ContentItemId | downcase %}selected{% endif %}>{{ item | display_text }}</option>
+                                    {% endfor %}
                                 </select>
                             </div>
                             <div class="col-sm-3">
+                                {% assign realEstateStatus = Queries.RealEstateStatus | query %}
                                 <label for="status">{{ "Property status" | t }}</label>
                                 <select id="status" class="form-control" name="status">
                                     <option value="*" selected="">{{ "Choose..." | t }}</option>
-                                    <option value="À louer">À louer</option>
-                                    <option value="À vendre">À vendre</option>
+                                    {% for item in realEstateStatus %}
+                                    <option value="{{ item.ContentItemId }}" {% if Request.Query.status | downcase == item.ContentItemId | downcase %}selected{% endif %}>{{ item | display_text }}</option>
+                                    {% endfor %}
                                 </select>
                             </div>
                             <div class="col-sm-3">
@@ -242,7 +204,7 @@
                                 <select id="region" class="form-control" name="region">
                                     <option value="*" selected="">{{ "Choose..." | t }}</option>
                                     {% for item in regions %}
-                                    <option value="{{ item.ContentItemId }}">{{ item | display_text }}</option>
+                                    <option value="{{ item.ContentItemId }}" {% if Request.Query.region | downcase == item.ContentItemId | downcase %}selected{% endif %}>{{ item | display_text }}</option>
                                     {% endfor %}
                                 </select>
                             </div>
@@ -399,7 +361,7 @@
             {% assign machinery_region = Content.ContentItemId[item.Content.FarmMachinery.Region.ContentItemIds[0]] %}
             {% assign img_alt =  machinery_brand | append: ' ' | append: item.Content.FarmMachinery.Model.Text %}
             <div class="card mb-3">
-                <a href="{{ item | display_url }}">
+                <a href="{{ item | display_url }}" class="image d-flex justify-content-center align-items-center">
                     {% if item.Content.FarmMachinery.WebsitePictures.Paths.size > 0 %}
                         {{ item.Content.FarmMachinery.WebsitePictures.Paths[0] | asset_url | resize_url: 480 | img_tag: alt: img_alt, class:'card-img-top' }}
                     {% else %}
