--- a/src/OrchardCore.Themes/AffairesExtra/Views/Content-OtherEquipment.liquid
+++ b/src/OrchardCore.Themes/AffairesExtra/Views/Content-OtherEquipment.liquid
@@ -1,7 +1,7 @@
 {% script src:"https://www.google.com/recaptcha/api.js" %}
-{% assign machinery_type = Content.ContentItemId[Model.ContentItem.Content.FarmMachinery.Type.ContentItemIds[0]] %}
-{% assign machinery_brand = Content.ContentItemId[Model.ContentItem.Content.FarmMachinery.Brand.ContentItemIds[0]] %}
-{% assign machinery_advertiser = Content.ContentItemId[Model.ContentItem.Content.FarmMachinery.Advertiser.ContentItemIds[0]] %}
+{% assign machinery_type = Content.ContentItemId[Model.ContentItem.Content.OtherEquipment.Type.ContentItemIds[0]] %}
+{% assign machinery_brand = Content.ContentItemId[Model.ContentItem.Content.OtherEquipment.Brand.ContentItemIds[0]] %}
+{% assign machinery_advertiser = Content.ContentItemId[Model.ContentItem.Content.OtherEquipment.Advertiser.ContentItemIds[0]] %}
 
 <section>
     {% if Request.Query.sent != null %}
@@ -17,15 +17,17 @@
   <div class="container">
 	<div class="row">
 		<div class="col-md-6">
-			<h1>{{ machinery_type | display_text }}<span class="brand-model">{{ machinery_brand | display_text }} {{ Model.ContentItem.Content.FarmMachinery.Model.Text }}</span></h1>
+			<h1>{{ machinery_type | display_text }}<span class="brand-model">{{ machinery_brand | display_text }} {{ Model.ContentItem.Content.OtherEquipment.Model.Text }}</span></h1>
 			<div class="price">
-                {%if Model.ContentItem.Content.FarmMachinery.Price.Value != null %}
-                    {{ Model.ContentItem.Content.FarmMachinery.Price.Value }} $ CAD
+                {%if Model.ContentItem.Content.OtherEquipment.Price.Value != null %}
+                    {{ Model.ContentItem.Content.OtherEquipment.Price.Value }} $ CAD
                 {% else %}
                     {{ "Price upon request" | t }}
                 {% endif %}
             </div>
-			
+            {% if Model.ContentItem.Content.OtherEquipment.PromoTag.Text != '' %}
+            <p><span class="tag">{{ Model.ContentItem.Content.OtherEquipment.PromoTag.Text }}</span></p>
+            {% endif %}
 			<table class="table border-bottom product-table">
                 {%if machinery_brand != null and machinery_brand != "" %}
 				<tr>
@@ -33,46 +35,46 @@
 					<td class="text-right">{{ machinery_brand | display_text }}</td>
 				</tr>
                 {% endif %}
-                {%if Model.ContentItem.Content.FarmMachinery.Model.Text != null and Model.ContentItem.Content.FarmMachinery.Model.Text != "" %}
+                {%if Model.ContentItem.Content.OtherEquipment.Model.Text != null and Model.ContentItem.Content.OtherEquipment.Model.Text != "" %}
 				<tr>
 					<td>{{ "Model" | t }} : </td>
-					<td class="text-right">{{ Model.ContentItem.Content.FarmMachinery.Model.Text }}</td>
+					<td class="text-right">{{ Model.ContentItem.Content.OtherEquipment.Model.Text }}</td>
 				</tr>
                 {% endif %}
-				{%if Model.ContentItem.Content.FarmMachinery.WheelDrive.Text != null and Model.ContentItem.Content.FarmMachinery.WheelDrive.Text != "0" %}
+				{%if Model.ContentItem.Content.OtherEquipment.WheelDrive.Text != null and Model.ContentItem.Content.OtherEquipment.WheelDrive.Text != "0" %}
 				<tr>
 					<td>{{ "Wheel drive" | t }} : </td>
-					<td class="text-right">{{ Model.ContentItem.Content.FarmMachinery.WheelDrive.Text }}</td>
+					<td class="text-right">{{ Model.ContentItem.Content.OtherEquipment.WheelDrive.Text }}</td>
 				</tr>
 				{% endif %}
-				{%if Model.ContentItem.Content.FarmMachinery.MotorHP.Value != null and Model.ContentItem.Content.FarmMachinery.MotorHP.Value != "0" %}
+				{%if Model.ContentItem.Content.OtherEquipment.MotorHP.Value != null and Model.ContentItem.Content.OtherEquipment.MotorHP.Value != "0" %}
 				<tr>
 					<td>{{ "Motor HP" | t }} : </td>
-					<td class="text-right">{{ Model.ContentItem.Content.FarmMachinery.MotorHP.Value }}</td>
+					<td class="text-right">{{ Model.ContentItem.Content.OtherEquipment.MotorHP.Value }}</td>
 				</tr>
 				{% endif %}
-				{%if Model.ContentItem.Content.FarmMachinery.PTOForce.Value != null and Model.ContentItem.Content.FarmMachinery.PTOForce.Value != "0" %}
+				{%if Model.ContentItem.Content.OtherEquipment.PTOForce.Value != null and Model.ContentItem.Content.OtherEquipment.PTOForce.Value != "0" %}
 				<tr>
 					<td>{{ "PTO force" | t }} : </td>
-					<td class="text-right">{{ Model.ContentItem.Content.FarmMachinery.PTOForce.Value }}</td>
+					<td class="text-right">{{ Model.ContentItem.Content.OtherEquipment.PTOForce.Value }}</td>
 				</tr>
 				{% endif %}
-				{%if Model.ContentItem.Content.FarmMachinery.Year.Value != null and Model.ContentItem.Content.FarmMachinery.Year.Value != "0" %}
+				{%if Model.ContentItem.Content.OtherEquipment.Year.Value != null and Model.ContentItem.Content.OtherEquipment.Year.Value != "0" %}
 				<tr>
 					<td>{{ "Year" | t }} : </td>
-					<td class="text-right">{{ Model.ContentItem.Content.FarmMachinery.Year.Value }}</td>
+					<td class="text-right">{{ Model.ContentItem.Content.OtherEquipment.Year.Value }}</td>
 				</tr>
 				{% endif %}
-				{%if Model.ContentItem.Content.FarmMachinery.Hours.Value != null and Model.ContentItem.Content.FarmMachinery.Hours.Value != "0" %}
+				{%if Model.ContentItem.Content.OtherEquipment.Hours.Value != null and Model.ContentItem.Content.OtherEquipment.Hours.Value != "0" %}
 				<tr>
 					<td>{{ "Hours" | t }} : </td>
-					<td class="text-right">{{ Model.ContentItem.Content.FarmMachinery.Hours.Value }}</td>
+					<td class="text-right">{{ Model.ContentItem.Content.OtherEquipment.Hours.Value }}</td>
 				</tr>
 				{% endif %}
-                {%if Model.ContentItem.Content.FarmMachinery.InventoryNo.Text != null %}
+                {%if Model.ContentItem.Content.OtherEquipment.InventoryNo.Text != null %}
 				<tr>
 					<td>{{ "Inventory #" | t }} : </td>
-					<td class="text-right">{{ Model.ContentItem.Content.FarmMachinery.InventoryNo.Text }}</td>
+					<td class="text-right">{{ Model.ContentItem.Content.OtherEquipment.InventoryNo.Text }}</td>
 				</tr>
                 {% endif %}
                 {%if machinery_advertiser != null %}
@@ -81,9 +83,9 @@
 					<td class="text-right">{{ machinery_advertiser | display_text }}</td>
 				</tr>
                 {% endif %}
-				{%if Model.ContentItem.Content.FarmMachinery.AdditionalDescription.Text != null %}
+				{%if Model.ContentItem.Content.OtherEquipment.AdditionalDescription.Text != null %}
 				<tr>
-					<td colspan="2">{{ "Additional informations" | t }} :  <br/><br/>{{ Model.ContentItem.Content.FarmMachinery.AdditionalDescription.Text }}</td>
+					<td colspan="2">{{ "Additional informations" | t }} :  <br/><br/>{{ Model.ContentItem.Content.OtherEquipment.AdditionalDescription.Text }}</td>
 				</tr>
 				{% endif %}
 			</table>
@@ -92,10 +94,10 @@
 		<div class="col-sm-6">
 			<div class="row">
 				<div class="col">
-                    {% if Model.ContentItem.Content.FarmMachinery.WebsitePictures.Paths.size > 0 %}
+                    {% if Model.ContentItem.Content.OtherEquipment.WebsitePictures.Paths.size > 0 %}
                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                       <ol class="carousel-indicators">
-                        {% for i in (1..Model.ContentItem.Content.FarmMachinery.WebsitePictures.Paths.size) %}
+                        {% for i in (1..Model.ContentItem.Content.OtherEquipment.WebsitePictures.Paths.size) %}
                             {% if i == 1 %}
                                 <li data-target="#carouselExampleIndicators" data-slide-to="{{i}}" class="active"></li>
                             {% else %}
@@ -104,14 +106,14 @@
                         {% endfor %}
                       </ol>
                       <div class="carousel-inner">
-                        {% for i in (1..Model.ContentItem.Content.FarmMachinery.WebsitePictures.Paths.size) %}
+                        {% for i in (1..Model.ContentItem.Content.OtherEquipment.WebsitePictures.Paths.size) %}
                             {% if i == 1 %}
                                 <div class="carousel-item active">
-                                  <img class="card-img-top" src="{{ Model.ContentItem.Content.FarmMachinery.WebsitePictures.Paths[i - 1] | asset_url }}" alt="{{ machinery_type | display_text }} {{ machinery_brand | display_text }} {{ item.Content.FarmMachinery.Model.Text }}" />
+                                  <img class="card-img-top" src="{{ Model.ContentItem.Content.OtherEquipment.WebsitePictures.Paths[i - 1] | asset_url }}" alt="{{ machinery_type | display_text }} {{ machinery_brand | display_text }} {{ item.Content.OtherEquipment.Model.Text }}" />
                                 </div>
                             {% else %}
                                 <div class="carousel-item">
-                                  <img class="card-img-top" src="{{ Model.ContentItem.Content.FarmMachinery.WebsitePictures.Paths[i - 1] | asset_url }}" alt="{{ machinery_type | display_text }} {{ machinery_brand | display_text }} {{ item.Content.FarmMachinery.Model.Text }}" />
+                                  <img class="card-img-top" src="{{ Model.ContentItem.Content.OtherEquipment.WebsitePictures.Paths[i - 1] | asset_url }}" alt="{{ machinery_type | display_text }} {{ machinery_brand | display_text }} {{ item.Content.OtherEquipment.Model.Text }}" />
                                 </div>
                             {% endif %}
                         {% endfor %}
@@ -126,8 +128,8 @@
                       </a>
                   </div>
                   {% else %}
-                  {{Model.ContentItem.Content.FarmMachinery.WebsitePictures.Paths.Count}}
-                  <img class="card-img-top" src="/AffairesExtra/img/noimage.png" alt="{{ machinery_type | display_text }} {{ machinery_brand | display_text }} {{ item.Content.FarmMachinery.Model.Text }}" />
+                  {{Model.ContentItem.Content.OtherEquipment.WebsitePictures.Paths.Count}}
+                  <img class="card-img-top" src="/AffairesExtra/img/noimage.png" alt="{{ machinery_type | display_text }} {{ machinery_brand | display_text }} {{ item.Content.OtherEquipment.Model.Text }}" />
                   {% endif %}
                </div>
             </div>
@@ -135,7 +137,7 @@
 				<div class="col">
 					<div class="mt-3 mb-2"><strong>PARTAGER</strong></div>
 					<a href="javascript: void()"><i class="fab fa-facebook-square fa-w-14 fa-3x"></i></a>
-					<a href="mailto:?subject={{ machinery_type | display_text }} {{ machinery_brand | display_text }} {{ Model.ContentItem.Content.FarmMachinery.Model.Text }}&amp;body={{ Request.Scheme }}://{{ Request.Host }}{{ Request.Path }}"><i class="fas fa-envelope-square fa-w-14 fa-3x"></i></a>
+					<a href="mailto:?subject={{ machinery_type | display_text }} {{ machinery_brand | display_text }} {{ Model.ContentItem.Content.OtherEquipment.Model.Text }}&amp;body={{ Request.Scheme }}://{{ Request.Host }}{{ Request.Path }}"><i class="fas fa-envelope-square fa-w-14 fa-3x"></i></a>
 				</div>
 			</div>
             <div class="row">
@@ -233,8 +235,8 @@
 	{% endif %}
   </div>
 
-  {% assign relatedFarmMachinery = Queries.RelatedFarmMachinery |  query: from: 0, size: 3, condition: "*", type: machinery_type.ContentItemId, brand: machinery_brand.ContentItemId, current: Model.ContentItem.ContentItemId %}
-  {% assign count = relatedFarmMachinery | size %}
+  {% assign relatedOtherEquipment = Queries.RelatedOtherEquipment |  query: from: 0, size: 3, condition: "*", type: machinery_type.ContentItemId, brand: machinery_brand.ContentItemId, current: Model.ContentItem.ContentItemId %}
+  {% assign count = relatedOtherEquipment | size %}
   {% if count > 0 %}
   <hr class="mt-4" />
   
@@ -242,31 +244,31 @@
   <h2 class="text-center mt-4 mb-4">Annonces similaires</h2>
   <div class="row">  
   
-  {% for item in relatedFarmMachinery %}
+  {% for item in relatedOtherEquipment %}
           <div class="col-md-4 d-flex align-items-stretch">
 
-            {% assign machinery_type = Content.ContentItemId[item.Content.FarmMachinery.Type.ContentItemIds[0]] %}
-            {% assign machinery_brand = Content.ContentItemId[item.Content.FarmMachinery.Brand.ContentItemIds[0]] %}
-            {% assign machinery_advertiser = Content.ContentItemId[item.Content.FarmMachinery.Advertiser.ContentItemIds[0]] %}
-            {% assign machinery_region = Content.ContentItemId[item.Content.FarmMachinery.Region.ContentItemIds[0]] %}
-            {% assign img_alt =  machinery_type | append: ' ' | machinery_brand | append: ' ' | append: item.Content.FarmMachinery.Model.Text %}
+            {% assign machinery_type = Content.ContentItemId[item.Content.OtherEquipment.Type.ContentItemIds[0]] %}
+            {% assign machinery_brand = Content.ContentItemId[item.Content.OtherEquipment.Brand.ContentItemIds[0]] %}
+            {% assign machinery_advertiser = Content.ContentItemId[item.Content.OtherEquipment.Advertiser.ContentItemIds[0]] %}
+            {% assign machinery_region = Content.ContentItemId[item.Content.OtherEquipment.Region.ContentItemIds[0]] %}
+            {% assign img_alt =  machinery_type | append: ' ' | machinery_brand | append: ' ' | append: item.Content.OtherEquipment.Model.Text %}
             <div class="card mb-3">
                 <a href="{{ item | display_url }}">
-                    {% if item.Content.FarmMachinery.WebsitePictures.Paths.size > 0 %}
-                        {{ item.Content.FarmMachinery.WebsitePictures.Paths[0] | asset_url | resize_url: 480 | img_tag: alt: img_alt, class:'card-img-top' }}
+                    {% if item.Content.OtherEquipment.WebsitePictures.Paths.size > 0 %}
+                        {{ item.Content.OtherEquipment.WebsitePictures.Paths[0] | asset_url | resize_url: 480 | img_tag: alt: img_alt, class:'card-img-top' }}
                     {% else %}
                         <img class="card-img-top" alt="no image" src="/AffairesExtra/img/noimage.png">
                     {% endif %}
                 </a>
               <div class="card-body">
-                {% if item.Content.FarmMachinery.Price.Value > 0 %}
-                  <h5 class="card-text">{{ item.Content.FarmMachinery.Price.Value }} $ CAD</h5>
+                {% if item.Content.OtherEquipment.Price.Value > 0 %}
+                  <h5 class="card-text">{{ item.Content.OtherEquipment.Price.Value }} $ CAD</h5>
                 {% else %}
                   <h5 class="card-text">{{ "Price upon request" | t }}</h5>
                 {% endif %}    
-                <h5 class="card-title"><a href="{{ item | display_url }}">{{ machinery_type | display_text }} <br/> {{ machinery_brand | display_text }} {{ item.Content.FarmMachinery.Model.Text }}</a></h5> 
-                {% if item.Content.FarmMachinery.Year.Value != null and item.Content.FarmMachinery.Year.Value > 0 %}
-                <p class="card-text">Année: {{ item.Content.FarmMachinery.Year.Value }}</p>
+                <h5 class="card-title"><a href="{{ item | display_url }}">{{ machinery_type | display_text }} <br/> {{ machinery_brand | display_text }} {{ item.Content.OtherEquipment.Model.Text }}</a></h5> 
+                {% if item.Content.OtherEquipment.Year.Value != null and item.Content.OtherEquipment.Year.Value > 0 %}
+                <p class="card-text">Année: {{ item.Content.OtherEquipment.Year.Value }}</p>
                 {% endif %}
                 {% if machinery_advertiser %}
                 <p class="card-text">Concessionnaire: {{ machinery_advertiser | display_text }}</p>
