--- a/src/OrchardCore.Themes/AffairesExtra/wwwroot/css/affaires-extra.css
+++ b/src/OrchardCore.Themes/AffairesExtra/wwwroot/css/affaires-extra.css
@@ -559,3 +559,41 @@ body {
     background-color: #e1150d !important;
     color: white !important;
     border-color: #e1150d !important; }
+
+.card .image {
+  height: 185px;
+  overflow: hidden; }
+
+.tag {
+  background: #e1150d;
+  border-radius: 3px 0 0 3px;
+  color: #FFF;
+  display: inline-block;
+  height: 26px;
+  line-height: 26px;
+  padding: 0 20px 0 23px;
+  position: relative;
+  margin: 0 10px 10px 0;
+  text-decoration: none;
+  -webkit-transition: color 0.2s; }
+
+.tag::before {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
+  content: '';
+  height: 6px;
+  left: 10px;
+  position: absolute;
+  width: 6px;
+  top: 10px; }
+
+.tag::after {
+  background: #fff;
+  border-bottom: 13px solid transparent;
+  border-left: 10px solid #e1150d;
+  border-top: 13px solid transparent;
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0; }
