Fixing OtherEquipments import

--- a/src/OrchardCore.Modules/AffairesExtra.Migration/Views/Admin/ImportOtherEquipement.cshtml
+++ b/src/OrchardCore.Modules/AffairesExtra.Migration/Views/Admin/ImportOtherEquipement.cshtml
@@ -1,1 +1,4 @@
-Finished importing Other Equipment
+@using AffairesExtra.Migration.ViewModel
+@model OtherEquipmentViewModel
+
+Finished importing Other Equipment @Model.Id
